Adding Search Bar and updating the route planner

--- a/app/src/main/res/layout/fragment_map_box.xml
+++ b/app/src/main/res/layout/fragment_map_box.xml
@@ -277,9 +277,11 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cardSeachZoomTo"
                     android:layout_width="90dp"
-                    android:layout_height="48dp"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:clickable="true"
+                    mapbox:cardBackgroundColor="#D6F1EE"
                     mapbox:cardCornerRadius="16dp"
                     mapbox:cardElevation="0dp"
                     mapbox:layout_constraintBottom_toBottomOf="parent"
@@ -299,6 +301,7 @@
                             android:clickable="false"
                             android:text="Zoom To"
                             android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="14sp"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -311,6 +314,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="2dp"
                             mapbox:layout_constraintBottom_toBottomOf="parent"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -323,9 +327,11 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cardSeachStartFrom"
                     android:layout_width="90dp"
-                    android:layout_height="48dp"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:clickable="true"
+                    mapbox:cardBackgroundColor="#D6F1EE"
                     mapbox:cardCornerRadius="16dp"
                     mapbox:cardElevation="0dp"
                     mapbox:layout_constraintBottom_toBottomOf="parent"
@@ -343,8 +349,9 @@
                             android:layout_height="wrap_content"
                             android:autoText="false"
                             android:clickable="false"
-                            android:text="Start From"
+                            android:text="Route From"
                             android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="14sp"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -357,6 +364,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="2dp"
                             mapbox:layout_constraintBottom_toBottomOf="parent"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -369,9 +377,11 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cardSeachEndAt"
                     android:layout_width="90dp"
-                    android:layout_height="48dp"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:clickable="true"
+                    mapbox:cardBackgroundColor="#D6F1EE"
                     mapbox:cardCornerRadius="16dp"
                     mapbox:cardElevation="0dp"
                     mapbox:layout_constraintBottom_toBottomOf="parent"
@@ -387,10 +397,11 @@
                             android:id="@+id/cardSeachEnd"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:autoText="false"
+                            android:autoText="true"
                             android:clickable="false"
-                            android:text="End At"
+                            android:text="Route To"
                             android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="14sp"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -403,6 +414,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="2dp"
                             mapbox:layout_constraintBottom_toBottomOf="parent"
                             mapbox:layout_constraintEnd_toEndOf="parent"
                             mapbox:layout_constraintStart_toStartOf="parent"
@@ -459,8 +471,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
+                    mapbox:cardBackgroundColor="#D6F1EE"
                     mapbox:cardCornerRadius="16dp"
                     mapbox:layout_constraintEnd_toStartOf="@+id/fab_StartRoute"
                     mapbox:layout_constraintStart_toStartOf="parent"
@@ -490,7 +503,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
+                            android:text="End Location"
                             android:textAlignment="textStart"
+                            android:textColor="@color/black"
                             android:textSize="20sp"
                             mapbox:layout_constraintBottom_toBottomOf="@+id/imageButton2"
                             mapbox:layout_constraintStart_toEndOf="@+id/imageButton2"
@@ -504,8 +519,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    mapbox:cardBackgroundColor="#D6F1EE"
                     mapbox:cardCornerRadius="16dp"
                     mapbox:layout_constraintEnd_toStartOf="@+id/fab_StartRoute"
                     mapbox:layout_constraintStart_toStartOf="parent"
@@ -535,6 +551,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
+                            android:text="Start Location"
+                            android:textColor="@color/black"
                             android:textSize="20sp"
                             mapbox:layout_constraintBottom_toBottomOf="@+id/imageButton"
                             mapbox:layout_constraintStart_toEndOf="@+id/imageButton"
