--- a/app/src/main/res/layout/fragment_map_box.xml
+++ b/app/src/main/res/layout/fragment_map_box.xml
@@ -249,6 +249,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/mySearchResult"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="MySearchResult"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:visibility="gone"
+                    mapbox:layout_constraintEnd_toEndOf="parent"
+                    mapbox:layout_constraintStart_toStartOf="parent"
+                    mapbox:layout_constraintTop_toBottomOf="@+id/searchList" />
+
                 <EditText
                     android:id="@+id/searchView"
                     android:layout_width="0dp"
@@ -287,7 +300,7 @@
                     mapbox:layout_constraintBottom_toBottomOf="parent"
                     mapbox:layout_constraintEnd_toStartOf="@+id/cardSeachStartFrom"
                     mapbox:layout_constraintStart_toStartOf="parent"
-                    mapbox:layout_constraintTop_toBottomOf="@+id/searchList">
+                    mapbox:layout_constraintTop_toBottomOf="@+id/mySearchResult">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -337,7 +350,7 @@
                     mapbox:layout_constraintBottom_toBottomOf="parent"
                     mapbox:layout_constraintEnd_toStartOf="@+id/cardSeachEndAt"
                     mapbox:layout_constraintStart_toEndOf="@+id/cardSeachZoomTo"
-                    mapbox:layout_constraintTop_toBottomOf="@+id/searchList">
+                    mapbox:layout_constraintTop_toBottomOf="@+id/mySearchResult">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -387,7 +400,7 @@
                     mapbox:layout_constraintBottom_toBottomOf="parent"
                     mapbox:layout_constraintEnd_toEndOf="parent"
                     mapbox:layout_constraintStart_toEndOf="@+id/cardSeachStartFrom"
-                    mapbox:layout_constraintTop_toBottomOf="@+id/searchList">
+                    mapbox:layout_constraintTop_toBottomOf="@+id/mySearchResult">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -451,7 +464,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Build a route by adding both a start and end location from either the map or the search bar"
+                    android:text="Build a route by adding both a start and end location from the blue locations available on the map or in the search bar"
                     android:textSize="12sp"
                     mapbox:layout_constraintEnd_toEndOf="parent"
                     mapbox:layout_constraintStart_toStartOf="@+id/navStartCard"
