--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/favoratesFragment"
         android:icon="@drawable/ic_heart"
-        android:title="Favorites" />
+        android:title="Favourites" />
 
 
     <item
